syntax="proto3";
option java_multiple_files=true;
option java_package="com.dj.ckw.authservice.grpc";

message PasswordResetInitiateRequest {
  string email = 1;
}

message PasswordResetInitiateResponse {
  bool success = 1;
  string message = 2;
}

message VerifyResetPasswordCodeRequest {
  string email = 1;
  string code = 2;
}

message VerifyResetPasswordCodeResponse {
  bool success = 1;
  string message = 2;
}

service UserPasswordResetService {
  rpc initiatePasswordReset(PasswordResetInitiateRequest) returns (PasswordResetInitiateResponse);
  rpc verifyResetPasswordCode(VerifyResetPasswordCodeRequest) returns (VerifyResetPasswordCodeResponse);
}
